# stack-2.5.1-jvm-example

./: .gitlab-ci.yml  app.hs  sample-jvm-package2020.cabal  stack.yaml
src/: Lib.hs
