-- vim: ts=2 sw=2 et :
cabal-version: 1.12
name:           sample-jvm-package2020
version:        5.3.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  extra-lib-dirs:
      /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64
      /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server
  build-depends:
      base >=4.7 && <5
    , jni
    , jvm
    , text
  default-language: Haskell2010

executable app
  main-is: app.hs
  hs-source-dirs:
      ./.
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  extra-lib-dirs:
      /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64
      /usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server
  build-depends:
      sample-jvm-package2020
    , base >=4.7 && <5
    , jni
    , jvm
    , text
  default-language: Haskell2010


